Fixed alignment in left sidebar. Minor aesthetic changes.

--- a/Becloudsmart-OutlookApp/Becloudsmart-OutlookAppWeb/AppRead/Home/css/Home.css
+++ b/Becloudsmart-OutlookApp/Becloudsmart-OutlookAppWeb/AppRead/Home/css/Home.css
@@ -57,6 +57,18 @@ div.icons
     border-bottom-color: #535456;
 }
 
+.sidebar
+{
+    position:absolute;
+}
+
+.expand
+{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    position:absolute;
+    left: 35px;
+}
+
 .icons.selected
 {
     background: #fff;
